Throwing the kitchen sink at Safari CSS jumping bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -689,7 +689,6 @@ h3 {
 }
 
 .lightFG {
-  will-change: transform; 
   width: auto;
   height: 50vh;
 }
@@ -1035,20 +1034,23 @@ main {
 }
 
 .bowieThumb {
+  cursor: pointer;
   height: 85%;
   position: absolute;
   bottom: 50%;
   left: 50%;
-  transform: translate(-50%, 50%) rotate(0deg);
+  will-change: transform, left, top, height;
+  transform: translate(-50%, 50%) rotate(0deg) translate3d(0,0,0);
   transition: 1.25s;
-  cursor: pointer;
+  transition-delay: 1ms;
+
 }
 
 .expandBowie {
   left: 0;
   bottom: 0;
   height: 35%;
-  transform: translate(-50%, 50%) rotate(-360deg);
+  transform: translate(0, 0) rotate(-360deg);
 }
 
 .bowieShadow {
@@ -1058,9 +1060,11 @@ main {
   background-color: sienna;
   top: 50%;
   right: 50%;
-  transform: translate(50%,-50%);
+  will-change: transform, left, top, height, width;
+  transform: translate(50%,-50%) rotate(0deg) translate3d(0,0,0);
   z-index: -1;
   transition: 1s;
+  transition-delay: 1ms;
 }
 
 .expandShadow {
@@ -1068,7 +1072,7 @@ main {
   height: 85%;
   top: 0;
   right: 0;
-  transform: translate(50%,-50%) rotate(180deg);
+  transform: translate(0,0) rotate(180deg);
 }
 
 .vidWrapper {
@@ -1076,7 +1080,6 @@ main {
 }
 
 .mediaComponents {
-  will-change: transform; 
   transform: translateY(20%) scale(.1);
   position: relative;
 }
@@ -1321,7 +1324,7 @@ main {
   }
 
   .icons h6 {
-    font-size: 2rem;
+    font-size: 1.6rem;
     margin-top: 0;
   }
 
